Fix: Edit blogpost functionality
The editor was not showing the initial blog post body content that we got from the server.  Also, after updating, the blog post body content was not being updated.

The issue was I was using EditorProvider and EditorContent (with useEditor) together. Now I am using just the EditorContent with useEditor.

--- a/client/src/styles/componentsStyles/adminComponentsStyles/createBlogpostComponentStyles.scss
+++ b/client/src/styles/componentsStyles/adminComponentsStyles/createBlogpostComponentStyles.scss
@@ -24,6 +24,7 @@
     display: block;
     padding-bottom: 10px;
     font-size: $font--x-large;
+    color: $color--indigo;
   }
 
   .blogpost-title #title {
@@ -42,16 +43,16 @@
 
   .blogpost-content {
     display: block;
-    padding-bottom: 20px;
     width: 100%;
-    min-height: 470px;
+    min-height: 430px;
   }
 
   .blogpost-content label {
     display: block;
-    padding-top: 25px;
+    padding-top: 10px;
     padding-bottom: 10px;
     font-size: $font--x-large;
+    color: $color--indigo;
   }
 
   .error-message {
@@ -134,6 +135,7 @@
   width: 100%;
   height: 300px;
   overflow: scroll;
+  margin-top: 20px;
   padding: 10px;
   border: 1px solid $color--indigo;
   border-radius: 0.25rem;
